# customer_interview

./: README.md  pyproject.toml  quick_check_pyhton.py  requirements.txt  sk.docx  ~$sk.docx  ~WRL0005.tmp
src/customer_interview/: __init__.py  agents.yaml  app.py  crew.py  main.py  sicherungcrewai  sicherungcrewai2  tasks.yaml
src/customer_interview/integrations/: __init__.py  search_factory.py  search_provider.py
src/customer_interview/tests/: test_you_search.py
