[project]
name = "customer_interview"
version = "0.1.0"
description = "customer_interview using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
customer_interview = "customer_interview.main:run"
run_crew = "customer_interview.main:run"
train = "customer_interview.main:train"
replay = "customer_interview.main:replay"
test = "customer_interview.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
